Fix top menu gap (mobile) and h1 padding

--- a/css/style.css
+++ b/css/style.css
@@ -50,6 +50,7 @@ h1, h2, h3, h4 {
 h1 {
   font-size: 2.75em;
   font-weight: 700;
+  margin-top: 0; /* Fixed the gap above menu bar */
 }
 
 h2 {
@@ -199,7 +200,7 @@ a:active {
 
 nav>ul {
   list-style-type: none;
-  padding: 0 0 0 0;
+  padding: 0;
 }
 
 nav>ul>li>a {
@@ -223,6 +224,10 @@ nav>ul>li>a {
   display: block;
 }
 
+#o h1, #about h1, #animation h1 {
+  padding: 30px 0 0 0;
+}
+
 #about-page h3 {
   margin-top: 0;
   margin-bottom: 0;
@@ -242,7 +247,6 @@ nav>ul>li>a {
   border-bottom: 2px solid #af8340;
   padding: 0 0 25px 0;
 }
-
 
 
 #project2 {
@@ -357,7 +361,6 @@ Medium devices (640px and larger)
 
   nav > ul {
     margin: 1em 0;
-    padding: 50px 0 0 0;
   }
 
   nav>ul>li {
